# solcraft-poker

./: .gitignore  DEPLOYMENT.md  README.md  SETUP_INSTRUCTIONS.md  SOLCRAFT_INTEGRATION_README.md  TODO_TASKS.md  components.json  database_schema.sql  deploy.sh  firebase_config.json  firebase_config_real.json  netlify.toml  next.config.js  next.config.ts  package-lock.json  package.json  requirements.txt  tsconfig.json  vercel.json
.github/workflows/: vercel-deploy.yml
api/: index.py  index_simple.py  solcraft_integration.py
api/models/: player.py
api/routes/: auth.py  fees.py  guarantees.py  players.py  tournaments.py
api/services/: auth_service.py  firebase_service.py
backend/: .env.example  README.md  firebase_admin_local.py  main.py  main_firebase.py  main_real.py  main_simple.py  requirements.txt  test_deploy_completo.md  test_deploy_segreti.md  update_deploy.md  vercel.json
backend/api/: __init__.py  index.py  legacy_index.py
backend/api/config/: __init__.py  database.py
backend/api/models/: tournament_models.py
backend/api/routers/: debug.py  fees.py  guarantees.py  info.py  players.py  tournaments.py  users.py
backend/api/routes/: blockchain.py  firebase_routes.py  tournaments.py  users.py
backend/api/services/: blockchain_service.py  blockchain_service_dev.py  blockchain_service_simple.py  fee_service.py  firebase_service.py  firebase_service_dev.py  firebase_service_real.py  guarantee_service.py  player_profile_service.py  tournament_service.py  tournament_service_firebase.py
backend/api/utils/: auth.py
backend/docs/: database-schema.md
backend/poker/: README.md  __init__.py  cards.py  game.py  hand_evaluator.py  service.py
backend/public/: index.html
backend/tests/: test_poker_engine.py  test_tournament_router.py  test_tournament_service.py  test_tournaments.py
frontend/: .env.example  README.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/__tests__/: TournamentCard.test.tsx
frontend/docs/: blueprint.md
frontend/src/ai/: dev.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: GuaranteePaymentForm.tsx  PlayerRankingBadge.tsx  greeting.test.tsx  greeting.tsx
frontend/src/config/: api.ts
frontend/src/docs/: pool-architecture.md
frontend/src/hooks/: use-wallet-auth.ts  useBalance.ts  useBlockchainData.ts  useNotifications.ts  useTournaments.ts  useWalletAuth.ts  useWalletConnection.ts
frontend/src/lib/: api-client-real.ts  api-client.ts  api-config.ts  firebase.js  firebase.ts  firebaseAdmin.ts  firebase_mock.ts  mock-data.ts  types.ts
frontend/src/services/: apiService.ts  feeService.ts  guaranteeService.ts  playerProfileService.ts  tournamentService.ts
frontend/src/types/: fees.ts  notifications.ts  player.ts
frontend_backup/: vercel.json
frontend_backup/public/.well-known/: walletconnect.txt
frontend_backup/src/components/: InitialFeePaymentForm.tsx  NotificationDropdown.tsx  PlatformFeesOverview.tsx  PlayerTournamentDashboard.tsx
frontend_backup/src/lib/: supabaseClient.ts
frontend_backup/src/services/: extendedApiService.ts  tournamentService.ts
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  types.ts  utils.ts
sol-craft/: README.md  firestore.rules  next.config.js  package-lock.json  package.json  tailwind.config.ts
sol-craft/docs/: blueprint.md
solana-contracts/: Cargo.toml
solana-contracts/programs/solcraft-escrow/: Cargo.toml
solana-contracts/programs/solcraft-escrow/src/: lib.rs
solana-contracts/programs/solcraft-governance/: Cargo.toml
solana-contracts/programs/solcraft-governance/src/: lib.rs
solana-contracts/programs/solcraft-poker/: Cargo.toml
solana-contracts/programs/solcraft-poker/src/: lib.rs
solana-contracts/programs/solcraft-staking/: Cargo.toml
solana-contracts/programs/solcraft-staking/src/: lib.rs
solana-contracts/programs/solcraft-token/: Cargo.toml
solana-contracts/programs/solcraft-token/src/: lib.rs
solana-contracts/programs/solcraft-tournaments/: Cargo.toml
solana-contracts/programs/solcraft-tournaments/src/: lib.rs
src/app/: globals.css  page.tsx
src/hooks/: useSolcraftContract.ts  useSolcraftWallet.ts
src/lib/: firebase.js  firebase.ts  types.ts
(+153 files in other folders)
