[workspace]
resolver = "2"
members = [
    "programs/solcraft-poker",
    "programs/solcraft-token", 
    "programs/solcraft-escrow",
    "programs/solcraft-governance",
    "programs/solcraft-staking",
    "programs/solcraft-tournaments"
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
mpl-token-metadata = "3.2.0"
switchboard-v2 = "0.4.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

