[workspace]
resolver = "2"

members = [
    "programs/solcraft-tournaments",
    "programs/solcraft-staking", 
    "programs/solcraft-governance",
    "programs/solcraft-escrow",
    "programs/solcraft-token"
]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
mpl-token-metadata = "4.1.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

