[package]
name = "solcraft-token"
version = "0.1.0"
description = "SolCraft Poker Token (SOLP) - Utility token for the poker ecosystem"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcraft_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
mpl-token-metadata = { workspace = true }

