[package]
name = "solcraft-tournaments"
version = "0.1.0"
description = "SolCraft Poker Tournament Management Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcraft_tournaments"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

